Fix overflow css bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,6 +60,10 @@
   }
 }
 
+.panel {
+  overflow: scroll;
+}
+
 .panel.js {
   width: 50px;
   -webkit-transition: 1s width;
